--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jasmine": "3.3.16",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "8.9.5",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "chart.js": "2.9.3",
     "primeflex": "2.0.0",
     "primeicons": "4.1.0",
